2009-03-26  Elliott Baron  <ebaron@redhat.com>

	* resources/multiProcTest: New test project.
	* MultiProcessTest.java: New file.
	* AllTests.java: Added MultiProcessTest to suite.

2009-03-18  Elliott Baron  <ebaron@redhat.com>

	* resources/linkedTest/: New test project.
	* AbstractLinkedResourceMemcheckTest.java: New file.
	* LinkedResourceDoubleClickTest.java: New file.
	* LinkedResourceMarkerTest.java: New file.
	* META-INF/MANIFEST.MF: New deps.
	* AllTests.java (suite): Added new tests to suite.
	* BasicMemcheckTest.java (setUp): Refactoring from profiling.tests.
	* DoubleClickTest.java (setUp): Likewise.
	* LaunchConfigTabTest.java (setUp): Likewise.
	* MarkerTest.java (setUp): Likewise.
	(getTopWorkspaceFrame): Use findFilesForLocation for linked resource compatibility.

2009-03-13  Andrew Overholt  <overholt@redhat.com>

	* test.xml: classname -> memcheck_classname.

2009-03-10  Elliott Baron  <ebaron@redhat.com>

	* AbstractMemcheckTest.java (getToolPage): Pass tool page to superclass.
	* BasicMemcheckTest.java: Call super on setUp and tearDown.
	* DoubleClickTest.java: Likewise.
	* LaunchConfigTabTest.java: Likewise.
	* MarkerTest.java: Likewise.
	* MemcheckLaunchMockPlugin.java: Removed.

2009-03-04  Andrew Overholt  <overholt@redhat.com>

	* test.xml: s/autoconf-folder/memcheck-folder.

2009-02-25  Elliott Baron  <ebaron@redhat.com>

	* valgrindFiles/*: Saved output from actual valgrind run. Used for testing
	in environments without Valgrind.
	* build.properties: Added valgrindFiles.
	* META-INF/MANIFEST.MF: New dependency.
	* AbstractMemcheckTest.java: Extracted superclass. 
	* BasicMemcheckTest.java: Use new launching method.
	* DoubleClickTest.java: Likewise.
	* LaunchConfigTabTest.java: Likewise.
	* MarkerTest.java: Likewise.

2009-02-12  Elliott Baron  <ebaron@redhat.com>

	* resources/basicTest/test suppfile.supp: New file.
	* resources/basicTest/testsuppfile.supp: New file.
	* LaunchConfigTabTest.java: New file.