@@ -1,3 +1,5 @@
+CollapseAction.Text=Collapse Beneath Selection
+ExpandAction.Text=Expand Beneath Selection
 ValgrindUIPlugin.Cannot_retrieve_view=Cannot retrieve view from extension
 ValgrindViewPart.No_Valgrind_output=No Valgrind output to display at this time.
 ValgrindViewPart.Select_a_recent_launch=Select a recent launch
